# ledgerflare

./: .aiignore  .env.sql  .env_dotenv  .env_dotenv_old  .envrc  .gitignore  .ignore  .qwenignore  .qwenrc  docker-compose.yaml  pyproject.toml  ruff.toml
requirements/: _all.txt  _base.txt  _dev_ids.txt  dev.txt
src/assistant/: apps.py
src/assistant/admin/: assistant.py
src/assistant/models/: assistant.py  assistant_proxy.py
src/assistant/signals/: assign_manager_permission.py  handlers.py  signals.py
src/assistant/views/: assistant.py
src/beach_wood_financial_proj/: urls.py
src/beach_wood_financial_proj/settings/: __init__.py  base.py  dev.py  production.py  sql_logging.py
src/beach_wood_user/: apps.py  authentication_backend.py
src/beach_wood_user/forms/: login.py
src/beach_wood_user/models/: beach_wood_user.py  manager.py
src/beach_wood_user/models/utils/: ledgerflare_user_utils.py
src/beach_wood_user/resources/: users.py
src/beach_wood_user/signals/: assign_group_to_user.py  delete_user.py  handlers.py  signals.py
src/beach_wood_user/urls/: auth.py
src/beach_wood_user/views/: api.py
src/beach_wood_user/views/auth/: login.py
src/bookkeeper/: apps.py
src/bookkeeper/admin/: bookkeeper.py
src/bookkeeper/models/: bookkeeper.py  bookkeeper_proxy.py
src/bookkeeper/signals/: handlers.py  signals.py
src/bookkeeper/views/: bookkeeper.py
src/cfo/: apps.py
src/cfo/admin/: cfo.py
src/cfo/models/: cfo.py  proxy.py
src/cfo/signals/: handlers.py  signals.py
src/cfo/views/: cfo.py
src/client/forms/: assign_cfo.py  client.py
src/client/models/: client.py  client_proxy.py
src/client/urls/: __init__.py
src/client/views/: api.py  bank_registerr.py  chart_of_accounts.py  client.py  expense_create.py  journal_entry.py  transactions.py
src/client_account/views/: api.py
src/client_category/models/: category.py
src/client_category/views/: api.py
src/components/bw_form/: bw_form.html  bw_form.py
src/components/filter_form/: filter_form.html
src/components/table_list_create_btn/: table_list_create_btn.py
src/core/choices/: fiscal_year.py
src/core/constants/: css_classes.py  identity.py
src/core/management/commands/: loaddata_verbose.py
src/core/management/mixins/: export_mixin.py
src/core/middleware/: security_logging.py  sql_query_logging.py
src/core/models/: crud_event_proxy.py
src/core/models/managers/: soft_delete.py
src/core/models/mixins/: access_proxy_models_mixin.py  base_model.py  staff_member.py
src/core/models/querysets/: base_queryset.py
src/core/utils/: context.py  security_logging.py  signal_handlers.py
src/core/utils/developments/: debugging_print_object.py  enhanced_debugging_print.py
src/core/views/: __init__.py  core.py  test_logging.py  test_security_logging.py  test_sql_logging.py
src/core/views/api/: fetch_url_api.py
src/core/views/errors/: __init__.py  error_404.py  error_500.py
src/dashboard/components/: __init__.py  chart_widget.py  kpi_card.py  table_widget.py  timeline_widget.py
src/dashboard/urls/: manager.py
src/discussion/: apps.py
src/discussion/admin/: __init__.py  discussion.py  notification.py
src/discussion/forms/: mini_form.py
src/discussion/models/: __init__.py  discussion.py  discussion_proxy.py  notification.py
src/discussion/serializers/: discussion.py
src/discussion/signals/: notification.py
src/discussion/urls/: api.py
src/discussion/views/: api.py
src/document/views/: api.py  document.py
src/frontend/: .gitignore  package.json  tailwind.config.js  tailwind.config.js.old
src/frontend/src/styles/: base.css  (+3 more)
src/frontend/webpack/: webpack.common.cjs  webpack.common.js  webpack.config.dev.cjs  webpack.config.prod.cjs  webpack.config.prod.js  webpack.config.watch.cjs  webpack.config.watch.js
src/important_contact/forms/: important_contact.py
src/important_contact/models/: important_contact.py
src/important_contact/views/: api.py  important_contact.py
src/job/filters/: job.py  job_visibility_form.py
src/job/forms/: job.py  mini_form.py
src/job/models/: help_messages.py  job.py  job_proxy.py
src/job/serializers/: job.py
src/job/views/: api.py  job.py
src/job_category/views/: api.py
src/manager/: apps.py
src/manager/admin/: manager.py
src/manager/models/: manager.py  manager_proxy.py
src/manager/signals/: handlers.py  signals.py
src/manager/views/: manager.py
src/note/views/: api.py  note.py
src/special_assignment/: apps.py
src/special_assignment/admin/: __init__.py  notifications.py  special_assignment.py
src/special_assignment/filters/: special_assignment.py
src/special_assignment/forms/: mini_form.py  special_assignment.py
src/special_assignment/models/: __init__.py  notifications.py  special_assignment.py
src/special_assignment/serializers/: special_assignment.py
src/special_assignment/signals/: notification.py
src/special_assignment/views/: api.py  special_assignment.py
src/task/forms/: task.py
src/task/views/: api.py  task.py
src/templates/assistant/: create.html  details.html  update.html
src/templates/beach_wood_user/: details.html  profile.html  update_password.html
src/templates/bookkeeper/: create.html  update.html
src/templates/cfo/: create.html  update.html
src/templates/client/: bank_register.html  chart_of_accounts.html  create.html  details.html  expense_create.html  journal_entry.html  transaction_list.html  update.html
src/templates/client_account/: create.html  update.html
src/templates/client_category/: create.html  update.html
src/templates/document/: create.html  update.html
src/templates/important_contact/: create.html  update.html
src/templates/job/: create.html  details.html  update.html
src/templates/job_category/: create.html  update.html
src/templates/manager/: create.html  details.html  update.html
src/templates/note/: create.html  update.html
src/templates/site_settings/: application_configuration.html  site_settings.html
src/templates/special_assignment/: create.html  details.html  update.html
src/templates/task/: create.html  update.html
(+99 files in other folders)
