[project]
name = "Leadgerflare_Web_Application"
version = "1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "colorama>=0.4.6",
    "crispy-tailwind>=1.0.3",
    "cryptography>=45.0.4",
    "django>=5.2.3",
    "django-admin-rangefilter>=0.13.2",
    "django-components>=0.141.0",
    "django-cors-headers>=4.7.0",
    "django-crispy-forms>=2.4",
    "django-defender>=0.9.8",
    "django-easy-audit>=1.3.7",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-guardian>=3.0.0",
    "django-import-export>=4.3.7",
    "django-log-viewer>=1.1.8",
    "django-maintenance-mode>=0.22.0",
    "django-redis>=6.0.0",
    "django-session-timeout>=0.1.0",
    "django-valkey>=0.2.1",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework>=3.16.0",
    "drf-standardized-errors>=0.15.0",
    "gunicorn>=23.0.0",
    "hiredis>=3.2.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "prettytable>=3.16.0",
    "psycopg[binary]>=3.2.9",
    "python-decouple>=3.8",
    "python-json-logger>=3.3.0",
    "python-magic>=0.4.27",
    "python-webpack-boilerplate>=1.0.4",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "sentry-sdk[django]>=2.30.0",
    "stringcase>=1.2.0",
    "whitenoise>=6.9.0",
]

[tool.black]
line-length = 91
target-version = ['py313']  # Updated to Python 3.13
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
py_version = 313  # Updated to Python 3.13
profile = "django"
line_length = 91
force_single_line = true
use_parentheses = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["your_project_name"]  # Replace with your project's name
known_third_party = ["django", "numpy", "pandas"]  # Add your third-party dependencies

[tool.djlint]
profile = "django"
extension = "html.dj"
indent = 4
exclude = ".venv,venv,.tox"
blank_line_after_tag = "load,extends,include"
blank_line_before_tag = "load,extends,include"
max_line_length = 95
format_attribute_template_tags = true
format_js = true
format_css = true
ignore = "H006"

[tool.ruff]
line-length = 91
target-version = "py313"  # Updated to Python 3.13
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
extend-exclude = ["docs", "test", "tests"]

[tool.ruff.lint]
select = ["F", "E", "B", "I", "UP", "SIM"]
ignore = ["D", "CPY", "T20", "DOC", "PGH"]
fixable = ["ALL"]
unfixable = []
preview = true
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true
docstring-code-format = true

[tool.mypy]
python_version = "3.13"  # Updated to Python 3.13
ignore_missing_imports = true
follow_imports = "silent"
no_implicit_optional = true
strict_optional = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_return_any = false
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
disallow_subclassing_any = true
exclude = ["docs", "test", "tests"]

[tool.bandit]
targets = ["."]
skips = ["B101"]  # Example: Skip assert statement checks

[tool.docformatter]
wrap-summaries = 91
wrap-descriptions = 91
black = true
blank = true
pre-summary-newline = true
pre-summary-space = true
make-summary-multi-line = true

[tool.pre-commit-config]
repos = [
    { repo = "https://github.com/astral-sh/ruff-pre-commit", rev = "v0.0.290", hooks = [{ id = "ruff", args = ["--fix"] }] },
    { repo = "https://github.com/psf/black", rev = "23.10.0", hooks = [{ id = "black" }] },
    { repo = "https://github.com/pre-commit/mirrors-isort", rev = "5.12.0", hooks = [{ id = "isort" }] },
    { repo = "https://github.com/myint/docformatter", rev = "v1.5.0", hooks = [{ id = "docformatter", args = ["--wrap-summaries=91", "--wrap-descriptions=91"] }] },
    { repo = "https://github.com/PyCQA/bandit", rev = "1.7.5", hooks = [{ id = "bandit" }] },
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "bandit>=1.8.5",
    "black>=25.1.0",
    "bpython>=0.25",
    "colorlog>=6.9.0",
    "curlylint>=0.13.1",
    "djade>=1.4.0",
    "django-admin-cli>=0.1.1",
    "django-anonymous>=0.4.0",
    "django-debug-permissions>=1.0.0",
    "django-debug-toolbar>=5.2.0",
    "django-debug-toolbar-template-profiler>=2.1.0",
    "django-debugtools>=2.0",
    "django-filter-stubs>=0.1.3",
    "django-model-info>=2024.11.5",
    "django-pdb>=0.6.2",
    "django-request-viewer>=1.0.3",
    "django-silk>=5.4.0",
    "django-stubs>=5.2.1",
    "django-stubs-ext>=5.2.1",
    "djangorestframework-stubs[compatible-mypy]>=1.4.0",
    "djangorestframework-types>=0.9.0",
    "djhtml>=3.0.8",
    "djipsum>=1.1.5",
    "djlint>=1.36.4",
    "docformatter>=1.7.7",
    "docutils>=0.21.2",
    "drf-typed>=0.3.0",
    "factory-boy>=3.3.3",
    "faker>=37.4.0",
    "flake8>=7.3.0",
    "gprof2dot>=2025.4.14",
    "inquirer>=3.4.0",
    "isort>=6.0.1",
    "lxml-stubs>=0.5.1",
    "mypy>=1.16.1",
    "mypy-extensions>=1.1.0",
    "pdbpp>=0.11.6",
    "pep8>=1.7.1",
    "phone-gen>=3.0.20",
    "pip-chill>=1.0.3",
    "pipdeptree>=2.26.1",
    "prettyprinter>=0.18.0",
    "pycodestyle>=2.14.0",
    "pydocstyle>=6.3.0",
    "pydot>=4.0.1",
    "pygraphviz>=1.14",
    "pylama>=8.4.1",
    "pylint>=3.3.7",
    "pylint-django>=2.6.1",
    "pyparsing>=3.2.3",
    "pypika>=0.48.9",
    "python-decouple-typed>=3.11.0",
    "remote-pdb>=2.1.0",
    "rich>=14.0.0",
    "ruff>=0.12.0",
    "termcolor>=3.1.0",
    "tqdm-stubs>=0.2.1",
    "typed-argument-parser>=1.10.1",
    "types-requests>=2.32.4.20250611",
    "werkzeug>=3.1.3",
    "yapf>=0.43.0",
]
documentation = [
    "autotyping>=24.9.0",
    "infer-types>=1.0.0",
    "monkeytype>=23.3.0",
    "sphinx>=8.2.3",
]
production = [
    "python-json-logger>=3.3.0",
]


