[project]
name = "Leadgerflare_Web_Application"
version = "1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.black]
line-length = 91
target-version = ['py313'] # Updated to Python 3.13
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
py_version = 313 # Updated to Python 3.13
profile = "django"
line_length = 91
force_single_line = true
use_parentheses = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["your_project_name"] # Replace with your project's name
known_third_party = [
    "django",
    "numpy",
    "pandas",
] # Add your third-party dependencies

[tool.djlint]
profile = "django"
extension = "html,djhtml"
indent = 4
# exclude directories and file patterns (comma separated)
exclude = ".venv,venv,.tox,build,dist,node_modules,src,src/**,**/*.py,**/__pycache__,**/migrations/**"
blank_line_after_tag = "load,extends,include"
blank_line_before_tag = "load,extends,include"
max_line_length = 95
format_attribute_template_tags = true
format_js = true
format_css = true
ignore = "H006, H014"

[tool.ruff]
line-length = 91
target-version = "py313" # Updated to Python 3.13
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
extend-exclude = ["docs", "test", "tests"]

[tool.ruff.lint]
# select = ["F", "E", "B", "I", "UP", "SIM"]
# ignore = ["D", "CPY", "T20", "DOC", "PGH"]
select = [
    'A',     # flake8-builtins
    'ASYNC', # https://docs.astral.sh/ruff/rules/#flake8-async-async
    'B',     # flake8-bugbear
    'BLE',   # flake8-blind-except
    'C4',    # unnecessary comprehensions, map()
    'COM',   # flake8-commas
    'DTZ',   # flake8-datetimez
    'E',     # pycodestyle
    'ERA',   # No commented out code
    'EXE',   # flake8-executable
    'F',     # pyflakes
    'FLY',   # flynt
    'G',     # flake8-logging-format
    'I',     # isort
    'ICN',   # https://github.com/joaopalmeiro/flake8-import-conventions
    'ISC',   # https://pypi.org/project/flake8-implicit-str-concat/
    'LOG',   # flake8-logging
    'PERF',  # perflint
    'PIE',   # https://pypi.org/project/flake8-pie/
    'PLC',   # Pylint conventions
    'PLE',   # Pylint error
    'PLW',   # Pylint warnings
    'PT',    # https://pypi.org/project/flake8-pytest-style/
    'PTH',   # flake8 use pathlib
    'RET',   # https://pypi.org/project/flake8-return/
    'RUF',   # Ruff rules
    'S',     # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    'SIM',   # https://pypi.org/project/flake8-simplify/
    'T',     # flake8-debugger
    'TRY',   # tryceratops
    'UP',    # pyupgrade
    'W',     # pycodestyle
    "UP",
    #'ARG',  # flake8 unused arguments (not really helpful, unused func args are common and ok)
    # 'D', # pydocstyle (too much)
    #'N',  # pep8-naming (too opinionated)
    #'NPY', # numpy
    #'PD', # pandas
    'PL', # Full Pylint (too much)
    #'PLR',  # Pylint refactor (too much/too opinionated)
]
fixable = ["ALL"]
unfixable = []
preview = true
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]




[tool.mypy]
python_version = "3.13"             # Updated to Python 3.13
ignore_missing_imports = true
follow_imports = "silent"
no_implicit_optional = true
strict_optional = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_return_any = false
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
disallow_subclassing_any = true
exclude = ["docs", "test", "tests"]

[tool.bandit]
targets = ["."]
skips = ["B101"] # Example: Skip assert statement checks

[tool.docformatter]
wrap-summaries = 91
wrap-descriptions = 91
black = true
blank = true
pre-summary-newline = true
pre-summary-space = true
make-summary-multi-line = true
